# chip8-web

./: README.md  index.html  main.bundle.js  package-lock.json  package.json  splash_screen.ch8  webpack.config.js
emulator/: Cargo.toml
emulator/src/: dom.rs  lib.rs  web_gl.rs
src/: App.jsx  App.module.scss  index.js  runner.js
src/Inputs/: Inputs.jsx  index.js
src/RomButton/: RomButton.jsx  index.js
src/SettingsButton/: SettingsButton.jsx  index.js
