[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
rust-chip8-opengl = "1.0.3"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["Window"] }

[lib]
crate-type = ["cdylib"]
