[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.69"
rust-chip8-opengl = "1.1.4"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Element",
    "Event",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "Performance",
    "Window",

    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
] }

[lib]
crate-type = ["cdylib"]
